--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,16 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
-    <string name="failed">Login Failed</string>
+    <string name="failed">Failed</string>
     <string name="not_found">Not found</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="type">Type</string>
+    <string name="add_exam">Add Exam</string>
+    <string name="add">Add</string>
+    <string name="logout">Log out</string>
+    <string name="log_out">Log out</string>
+    <string name="do_u_log">Do you wanna logout?</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 </resources>
